--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ before_install:
   - echo "installing PhantomJS 1.9.0"
   - wget http://phantomjs.googlecode.com/files/phantomjs-1.9.0-linux-x86_64.tar.bz2
   - tar -xvf phantomjs-1.9.0-linux-x86_64.tar.bz2
+  - mkdir bin
   - sudo mv phantomjs-1.9.0-linux-x86_64/bin/phantomjs bin/phantomjs190
   - bin/phantomjs190 --version
   - ls -la bin/phantomjs190
