--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,12 @@ branches:
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq poppler-utils
+
+install:
   - echo "installing PhantomJS 1.9.0"
+  - mkdir bin
   - wget http://phantomjs.googlecode.com/files/phantomjs-1.9.0-linux-x86_64.tar.bz2
   - tar -xvf phantomjs-1.9.0-linux-x86_64.tar.bz2
-  - mkdir bin
   - sudo mv phantomjs-1.9.0-linux-x86_64/bin/phantomjs bin/phantomjs190
   - bin/phantomjs190 --version
   - ls -la bin/phantomjs190
