--- a/.travis.yml
+++ b/.travis.yml
@@ -5,20 +5,11 @@ php:
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq poppler-utils
+  - npm install -g bower
 
 install:
-  - echo "installing PhantomJS 1.9.0"
-  - mkdir bin
-  - wget http://phantomjs.googlecode.com/files/phantomjs-1.9.0-linux-x86_64.tar.bz2
-  - tar -xvf phantomjs-1.9.0-linux-x86_64.tar.bz2
-  - sudo mv phantomjs-1.9.0-linux-x86_64/bin/phantomjs bin/phantomjs190
-  - bin/phantomjs190 --version
-  - ls -la bin/phantomjs190
-  - echo "installing CasperJS 1.1-beta1"
-  - wget https://github.com/n1k0/casperjs/tarball/1.1-beta1 -O casperjs-1.1-beta1.tgz
-  - mkdir casperjs
-  - tar -xvf casperjs-1.1-beta1.tgz -C casperjs --strip-components 1
-  - npm install -g bower
+  - make install-phamtomjs
+  - make install-casperjs
   - bower install
 
 before_script:
